@@ -1,7 +1,12 @@
 CHANGELOG
 
+2021-03-11
+* Making simple planar maps: PlanarMap(segment), PlanarMap(triangle), 
+PlanarMap(rectangle), PlanarMap(polygon).
+
 2021-03-10
 * Graph updated from graphtheory package (iteredges_connected, iterface).
+* PlanarMap with map overlay added.
 
 2021-03-04
 * TriangleCollection with sets, faster searching and removing triangles.
